--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+# Temp files
+.temp
+build
+
+.DS_Store
