--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-filter": "^3.0.1",
     "gulp-livescript": "^2.4.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-main-bower-files": "^1.2.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
