--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "jquery": "~2.1.4",
     "velocity": "~1.2.3",
     "angular-smart-table": "~2.1.4",
-    "animate.css": "~3.4.0"
+    "animate.css": "~3.4.0",
+    "lodash": "~3.10.1"
   }
 }
