--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "velocity": "~1.2.3",
     "angular-smart-table": "~2.1.4",
     "animate.css": "~3.4.0",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "angular-perfect-scrollbar": "~0.0.4"
   }
 }
